// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Checkbox Multiple has a helptext 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="lfr-ddm-checkbox-multiple"
    >
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            class="toggle-switch-check"
            type="checkbox"
            value="option1"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 1
          </span>
        </label>
      </div>
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            class="toggle-switch-check"
            type="checkbox"
            value="option2"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 2
          </span>
        </label>
      </div>
    </div>
    <span
      aria-hidden="true"
      class="form-text"
    >
      Type something
    </span>
    <span
      class="sr-only"
      id="undefined_fieldDetails"
    >
      Type something
      <br />
    </span>
  </div>
</div>
`;

exports[`Field Checkbox Multiple has a key 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="lfr-ddm-checkbox-multiple"
    >
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            class="toggle-switch-check"
            type="checkbox"
            value="option1"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 1
          </span>
        </label>
      </div>
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            class="toggle-switch-check"
            type="checkbox"
            value="option2"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 2
          </span>
        </label>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Field Checkbox Multiple has a label 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <label
      aria-describedby="undefined_fieldDetails"
      class="ddm-label"
      tabindex="0"
    >
      label
    </label>
    <div
      class="lfr-ddm-checkbox-multiple"
    >
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            class="toggle-switch-check"
            type="checkbox"
            value="option1"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 1
          </span>
        </label>
      </div>
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            class="toggle-switch-check"
            type="checkbox"
            value="option2"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 2
          </span>
        </label>
      </div>
    </div>
    <span
      class="sr-only"
      id="undefined_fieldDetails"
    >
      label
      <br />
    </span>
  </div>
</div>
`;

exports[`Field Checkbox Multiple has a predefined Value 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="lfr-ddm-checkbox-multiple"
    >
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            class="toggle-switch-check"
            type="checkbox"
            value="option1"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 1
          </span>
        </label>
      </div>
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            class="toggle-switch-check"
            type="checkbox"
            value="option2"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 2
          </span>
        </label>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Field Checkbox Multiple has a spritemap 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="lfr-ddm-checkbox-multiple"
    >
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            class="toggle-switch-check"
            type="checkbox"
            value="option1"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 1
          </span>
        </label>
      </div>
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            class="toggle-switch-check"
            type="checkbox"
            value="option2"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 2
          </span>
        </label>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Field Checkbox Multiple has a value 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="lfr-ddm-checkbox-multiple"
    >
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            class="toggle-switch-check"
            type="checkbox"
            value="option1"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 1
          </span>
        </label>
      </div>
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            class="toggle-switch-check"
            type="checkbox"
            value="option2"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 2
          </span>
        </label>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Field Checkbox Multiple has an id 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="lfr-ddm-checkbox-multiple"
    >
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            class="toggle-switch-check"
            type="checkbox"
            value="option1"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 1
          </span>
        </label>
      </div>
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            class="toggle-switch-check"
            type="checkbox"
            value="option2"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 2
          </span>
        </label>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Field Checkbox Multiple is not editable 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="lfr-ddm-checkbox-multiple"
    >
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            class="toggle-switch-check"
            disabled=""
            type="checkbox"
            value="option1"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 1
          </span>
        </label>
      </div>
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            class="toggle-switch-check"
            disabled=""
            type="checkbox"
            value="option2"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 2
          </span>
        </label>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Field Checkbox Multiple is not required 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="lfr-ddm-checkbox-multiple"
    >
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            class="toggle-switch-check"
            type="checkbox"
            value="option1"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 1
          </span>
        </label>
      </div>
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            class="toggle-switch-check"
            type="checkbox"
            value="option2"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 2
          </span>
        </label>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Field Checkbox Multiple is shown as a switcher 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="lfr-ddm-checkbox-multiple"
    >
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            class="toggle-switch-check"
            type="checkbox"
            value="option1"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 1
          </span>
        </label>
      </div>
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            class="toggle-switch-check"
            type="checkbox"
            value="option2"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 2
          </span>
        </label>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Field Checkbox Multiple is shown as checkbox 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="lfr-ddm-checkbox-multiple"
    >
      <div
        class="custom-control custom-checkbox"
      >
        <label>
          <input
            class="custom-control-input"
            type="checkbox"
            value="option1"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 1
            </span>
          </span>
        </label>
      </div>
      <div
        class="custom-control custom-checkbox"
      >
        <label>
          <input
            class="custom-control-input"
            type="checkbox"
            value="option2"
          />
          <span
            class="custom-control-label"
          >
            <span
              class="custom-control-label-text"
            >
              Option 2
            </span>
          </span>
        </label>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Field Checkbox Multiple renders Label if showLabel is true 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <label
      aria-describedby="undefined_fieldDetails"
      class="ddm-label"
      tabindex="0"
    >
      text
    </label>
    <div
      class="lfr-ddm-checkbox-multiple"
    >
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            class="toggle-switch-check"
            type="checkbox"
            value="option1"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 1
          </span>
        </label>
      </div>
      <div
        class="lfr-ddm-form-field-checkbox-switch"
      >
        <label
          class="simple-toggle-switch toggle-switch"
        >
          <input
            class="toggle-switch-check"
            type="checkbox"
            value="option2"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
          <span
            class="toggle-switch-label"
          >
            Option 2
          </span>
        </label>
      </div>
    </div>
    <span
      class="sr-only"
      id="undefined_fieldDetails"
    >
      text
      <br />
    </span>
  </div>
</div>
`;
